objects/Forma_de_pago__c.object
<CustomObject>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Formas de pago</relationshipLabel>
        <relationshipName>Formas_de_pago</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>N_mero__c</fullName>
        <label>Número</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_forma_de_pago__c</fullName>
        <label>Tipo de forma de pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transferencia bancaria</fullName>
                </value>
                <value>
                    <fullName>Contado</fullName>
                </value>
                <value>
                    <fullName>Tarjeta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Forma de pago</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Nombre de Forma de pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formas de pago</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>